Add JvmFloorWorkload and profiling integration
Introduces `JvmFloorWorkload` to trigger critical JVM subsystems (JIT,
GC, Loom, NIO, Threading) and adds a corresponding Gradle task and
integration test for generating system call Bills of Behavior (BoB).

Signed-off-by: Leanid Piliptsevich <pilleo19@gmail.com>